# Polynomial-Project

./: README.md
Polynomial Equation/: CMakeLists.txt  Functions.cpp  Functions.h  Graph.cpp  Graph.h  main.cpp
